# preFlight-wasm

./: .gitignore  PORTING.md  README.md
.github/workflows/: build.yml
bridge/: CMakeLists.txt  preflight_wrap.cpp
patches/: preflight-wasm.patch
scripts/: build-wasm.sh
tests/: slice-test.cjs  verify-gcode.cjs
vendor-cmake/: README.md  expat-2.6.3-CMakeLists.txt  heatshrink-CMakeLists.txt
wasm/: CMakeLists.txt
wasm/cmake/: FindOpenVDB.cmake  Findheatshrink.cmake  Findnlohmann_json.cmake
wasm/toolchain/: emsdk.env
wasm/wasm_shims/: jmorecfg.h
wasm/wasm_shims/cereal/: cereal.hpp
wasm/wasm_shims/oneapi/tbb/: blocked_range2d.h  concurrent_unordered_set.h  enumerable_thread_specific.h  global_control.h  mutex.h  parallel_for_each.h  parallel_pipeline.h  parallel_reduce.h  partitioner.h  pipeline.h  task_arena.h  task_group.h  task_scheduler_init.h  task_scheduler_observer.h  version.h
wasm/wasm_shims/tbb/: enumerable_thread_specific.h  parallel_pipeline.h  partitioner.h  task_scheduler_observer.h
